removed auth lib and moved everything up one level

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <title>Stencil Component Starter</title>
-  <script src="auth.js"></script>
-  <script src="/build/mycomponent.js"></script>
+  <script src="/build/toolkit.js"></script>
   
 </head>
 <body>
@@ -15,7 +14,7 @@
 
   <my-auth name='a974dfa0-9f57-49b9-95db-90f04ce2111a'></my-auth>
   
-  <my-login></my-login>
+  <my-login style="float: right;"></my-login>
 
   <my-day></my-day>
 
