improved msal provider

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!-- <script>
-    Auth.initV2Provider();
+    Auth.initMSALProvider();
   </script> -->
 
   <my-auth name='a974dfa0-9f57-49b9-95db-90f04ce2111a'></my-auth>
