added login-type property to my-auth, added silent idToken retrevial to MSAL

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
     Auth.initMSALProvider();
   </script> -->
 
-  <my-auth name='a974dfa0-9f57-49b9-95db-90f04ce2111a'></my-auth>
+  <my-auth name='a974dfa0-9f57-49b9-95db-90f04ce2111a'
+            login-type='redirect'></my-auth>
   
   <my-login style="float: right;"></my-login>
 
