--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,41 @@
     client-id='a974dfa0-9f57-49b9-95db-90f04ce2111a'
     login-type='redirect'></my-login>
 
-  <my-day></my-day>
+  <my-day id="myDay"></my-day>
+
+  <template id="my-template">
+    <style>
+      .eventBtn {
+        background: green;
+      }
+    </style>
+    <button class="eventBtn">EVENT NAME GOES HERE</button>
+  </template>
+
+  <script>
+    let myDay = document.getElementById('myDay');
+    // myDay.eventTemplateFunction = (event) => {
+    //   return `<style>
+    //       .testbtn {
+    //         background: red;
+    //       }
+    //     </style>
+    //     <button class="testbtn">${event.subject}</button>`
+    // }
+
+    myDay.eventTemplateFunction = (event) => {
+      let template = document.getElementById("my-template");
+      let templateContent = template.content.cloneNode(true);
+      
+      let btn = templateContent.querySelector('.eventBtn');
+      btn.innerHTML = event.subject;
+      btn.onclick = function () {
+        console.log(`${event.subject} clicked`);
+      }
+
+      return templateContent;
+    };
+  </script>
 
 </body>
 </html>
