added login style

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <title>Stencil Component Starter</title>
   <script src="/build/toolkit.js"></script>
+  <link rel=stylesheet href="/build/toolkit.css"></link>
   
 </head>
 <body>
