--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 
-  <my-auth client-id='a974dfa0-9f57-49b9-95db-90f04ce2111a'
-            login-type='popup'></my-auth>
-  
+  <my-wam-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"></my-wam-provider>
+  <my-msal-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a" login-type="popup"></my-msal-provider>
+                    
   <my-login style="float: right;"></my-login>
 
   <my-day></my-day>
