--- a/M365ToolkitComponents/src/index.html
+++ b/M365ToolkitComponents/src/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
 
-  <my-wam-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"></my-wam-provider>
-  <my-msal-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a" login-type="popup"></my-msal-provider>
+  <m365-wam-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"></m365-wam-provider>
+  <m365-msal-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a" login-type="popup"></m365-msal-provider>
                     
-  <my-login style="float: right;"></my-login>
+  <m365-login style="float: right;"></m365-login>
 
-  <my-day></my-day>
+  <m365-agenda></m365-agenda>
 
 </body>
 </html>
