--- a/M365ToolkitComponents/src/index.html
+++ b/M365ToolkitComponents/src/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
 
-  <m365-wam-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"></m365-wam-provider>
-  <m365-msal-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a" login-type="popup"></m365-msal-provider>
+  <graph-wam-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"></graph-wam-provider>
+  <graph-msal-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a" login-type="popup"></graph-msal-provider>
                     
-  <m365-login style="float: right;"></m365-login>
+  <graph-login style="float: right;"></graph-login>
 
-  <m365-agenda></m365-agenda>
+  <graph-agenda></graph-agenda>
 
 </body>
 </html>
