added graph-persona and style for graph-agenda

--- a/M365ToolkitComponents/src/index.html
+++ b/M365ToolkitComponents/src/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <graph-wam-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"></graph-wam-provider>
-  <graph-msal-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a" login-type="popup"></graph-msal-provider>
+  <graph-msal-provider client-id="6f668011-f616-4857-81a3-39d929681b1b"></graph-msal-provider>
                     
   <graph-login style="float: right;"></graph-login>
 
