--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Microsoft Graph Toolkit Test</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <script type="module" src="./dist/components/graph-login/graph-login.js"></script>
     <script type="module" src="./dist/components/graph-persona/graph-persona.js"></script>
     <script type="module" src="./dist/components/graph-agenda/graph-agenda.js"></script>
