--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <script type="module" src="./dist/es6/components/graph-agenda/graph-agenda.js"></script>
     <script type="module" src="./dist/es6/components/providers/graph-msal-provider/graph-msal-provider.js"></script> -->
 
-    <!-- <script type="module" src="./dist/es6/index.js"></script> -->
+    <script type="module" src="./dist/es6/index.js"></script>
 
-    <script src="./dist/es5/ms-graph-toolkit.js"></script>
+    <!-- <script src="./dist/es5/ms-graph-toolkit.js"></script> -->
 
 </head>
 <body>
-    <!-- <graph-msal-provider test="test" client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"></graph-msal-provider> -->
+    <graph-msal-provider test="test" client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"></graph-msal-provider>
     <graph-login style="float: right;"></graph-login>
     <graph-agenda id='myDay'></graph-agenda>
 
@@ -31,11 +31,11 @@
     
     </script> -->
 
-    <script>
+    <!-- <script>
         msGraphToolkit.Providers.addMsalProvider({
             clientId: 'a974dfa0-9f57-49b9-95db-90f04ce2111a'
         });
-    </script>
+    </script> -->
 
     <!-- <template id="my-template">
         <style>
