Added normalize css to main site.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script type="module" src="./dist/es6/index.js"></script>
 
     <!-- <script src="./dist/es5/ms-graph-toolkit.js"></script> -->
+    <link href="index.css" rel="stylesheet" />
   </head>
   <body>
     <mgt-msal-provider
