added authority to mgt-msal-provider

--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
   </head>
   <body>
     <mgt-msal-provider
-      test="test"
       client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"
-    ></mgt-msal-provider>
+      ></mgt-msal-provider>
     <mgt-login style="float: right;"></mgt-login>
-    <mgt-agenda id="myDay"></mgt-agenda>
-
+    <!-- <mgt-agenda id="myDay"></mgt-agenda> -->
+      
+    <!-- authority="https://login.microsofonline.com/nikolame.onmicrosoft.com" -->
+    
     <!-- <script type="module">
         import {Providers} from './dist/es6/index.js'
 
