[mgt-person] added show-name and show-email properties. renamed person-id to preson-query

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"
       ></mgt-msal-provider>
     <mgt-login style="float: right;"></mgt-login>
+    <mgt-person person-query="me" show-name show-email></mgt-person>
     <!-- <mgt-agenda id="myDay"></mgt-agenda> -->
       
     <!-- authority="https://login.microsofonline.com/nikolame.onmicrosoft.com" -->
