--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <mgt-mock-provider></mgt-mock-provider>
 
     <mgt-login></mgt-login>
-    <mgt-person person-query="me"></mgt-person>
+    <mgt-person person-query="me" show-name show-email></mgt-person>
     <mgt-agenda></mgt-agenda>
 
     <!-- <mgt-agenda id="myDay"></mgt-agenda> -->
