--- a/index_2.html
+++ b/index_2.html
@@ -10,11 +10,11 @@
     <!-- <script type="module" src="./bin/index.js"></script> -->
 
     <script type="module" src="./bin/components/mgt-mock-provider.js"></script>
-    <script type="module" src="./bin/components/mgt-person.js"></script>
+    <script type="module" src="./bin/components/mgt-login.js"></script>
 
     <mgt-mock-provider></mgt-mock-provider>
   </head>
   <body>
-    <mgt-person person-query="me" show-name show-email></mgt-person>
+    <mgt-login></mgt-login>
   </body>
 </html>
