Finishing up Restructure

--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
     <script type="module" src="./dist/es6/components/mgt-agenda/mgt-agenda.js"></script>
     <script type="module" src="./dist/es6/components/providers/mgt-msal-provider/mgt-msal-provider.js"></script> -->
 
-    <script
-      type="module"
-      src="./dist/es6/test/mock/mgt-mock-provider.js"
-    ></script>
-    <script type="module" src="./dist/es6/index.js"></script>
+    <script type="module" src="./dist/bundle/index.js"></script>
 
     <!-- <script src="./dist/es5/ms-graph-toolkit.js"></script> -->
     <link href="index.css" rel="stylesheet" />
