--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script type="module" src="./dist/es6/components/mgt-agenda/mgt-agenda.js"></script>
     <script type="module" src="./dist/es6/components/providers/mgt-msal-provider/mgt-msal-provider.js"></script> -->
 
-    <script type="module" src="./dist/bundle/index.js"></script>
+    <script type="module" src="./dist/es6/bundle/index.js"></script>
 
     <!-- <script src="./dist/es5/ms-graph-toolkit.js"></script> -->
     <link href="index.css" rel="stylesheet" />
