Got IE11 Builds working

--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Microsoft Graph Toolkit Test</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="https://unpkg.com/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
+
+    <link href="index.css" rel="stylesheet" />
+
+    <script type="module" src="./dist/es5/bundle/mgt.js"></script>
 
     <!-- <script type="module" src="./dist/es6/components/mgt-login/mgt-login.js"></script>
     <script type="module" src="./dist/es6/components/mgt-person/mgt-person.js"></script>
     <script type="module" src="./dist/es6/components/mgt-agenda/mgt-agenda.js"></script>
     <script type="module" src="./dist/es6/components/providers/mgt-msal-provider/mgt-msal-provider.js"></script> -->
 
-    <script type="module" src="./dist/es6/bundle/index.js"></script>
-
     <!-- <script src="./dist/es5/ms-graph-toolkit.js"></script> -->
-    <link href="index.css" rel="stylesheet" />
+    
   </head>
   <body>
     <!-- <mgt-msal-provider
