--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Microsoft Graph Toolkit Test</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="https://unpkg.com/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
 
     <!-- <script type="module" src="./dist/es6/components/mgt-login/mgt-login.js"></script>
     <script type="module" src="./dist/es6/components/mgt-person/mgt-person.js"></script>
     <script type="module" src="./dist/es6/components/mgt-agenda/mgt-agenda.js"></script>
     <script type="module" src="./dist/es6/components/providers/mgt-msal-provider/mgt-msal-provider.js"></script> -->
 
-    <script
-      type="module"
-      src="./dist/es6/test/mock/mgt-mock-provider.js"
-    ></script>
-    <script type="module" src="./dist/es6/index.js"></script>
+    <!-- <script type="module" src="./dist/es6/components/providers/mgt-msal-provider/mgt-msal-provider.js"></script> -->
+
+    <script src="./dist/bundle/mgt-loader.js"></script>
+    <!-- <script type="module" src="./dist/es6/index.js"></script> -->
 
     <!-- <script src="./dist/es5/ms-graph-toolkit.js"></script> -->
     <link href="index.css" rel="stylesheet" />
@@ -26,7 +24,7 @@
       client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"
       ></mgt-msal-provider> -->
 
-    <mgt-mock-provider></mgt-mock-provider>
+    <!-- <mgt-mock-provider></mgt-mock-provider> -->
 
     <mgt-login></mgt-login>
     
