--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       login.addEventListener('logoutCompleted', (event) => {console.log('logoutCompleted')});
     </script> -->
     
-    <mgt-person person-query="me" show-name show-email></mgt-person>
-    <mgt-agenda></mgt-agenda>
+    <!-- <mgt-person person-query="me" show-name show-email></mgt-person> -->
+    <!-- <mgt-agenda></mgt-agenda> -->
 
     <!-- <mgt-agenda id="myDay"></mgt-agenda> -->
 
