--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
 
     <!-- <script type="module" src="./dist/es6/components/providers/mgt-msal-provider/mgt-msal-provider.js"></script> -->
 
-    <script src="./dist/bundle/mgt-loader.js"></script>
+    <!-- <script src="./dist/bundle/mgt-loader.js"></script> -->
+    
     <!-- <script type="module" src="./dist/es6/index.js"></script> -->
 
     <!-- <script src="./dist/es5/ms-graph-toolkit.js"></script> -->
+
+    <script type="module" src="./dist/es6/components/mgt-login/mgt-login.js"></script>
+
     <link href="index.css" rel="stylesheet" />
   </head>
   <body>
