initial move to graph sdk

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <script type="module" src="./dist/es6/mock/mgt-mock-provider.js"></script>
   </head>
   <body>
-    <!-- <mgt-msal-provider
+    <mgt-msal-provider
       client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"
-      ></mgt-msal-provider> -->
+      ></mgt-msal-provider>
 
-    <mgt-mock-provider></mgt-mock-provider>
+    <!-- <mgt-mock-provider></mgt-mock-provider> -->
 
     <mgt-login></mgt-login>
     
