--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <!-- <script type="module" src="./dist/es6/index.js"></script> -->
     
-    <!-- <script type="module" src="./dist/es6/components/providers/mgt-msal-provider/mgt-msal-provider.js"></script> -->
+    <script type="module" src="./dist/es6/components/providers/mgt-msal-provider.js"></script>
     <script type="module" src="./dist/es6/components/mgt-login/mgt-login.js"></script>
     <script type="module" src="./dist/es6/mock/mgt-mock-provider.js"></script>
   </head>
