added graph sdk implementation

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     
     <script type="module" src="./dist/es6/components/providers/mgt-msal-provider.js"></script>
     <script type="module" src="./dist/es6/components/mgt-login/mgt-login.js"></script>
+    <script type="module" src="./dist/es6/components/mgt-agenda/mgt-agenda.js"></script>
     <script type="module" src="./dist/es6/mock/mgt-mock-provider.js"></script>
   </head>
   <body>
@@ -44,7 +45,7 @@
     </script> -->
     
     <!-- <mgt-person person-query="me" show-name show-email></mgt-person> -->
-    <mgt-agenda></mgt-agenda>
+    <!-- <mgt-agenda></mgt-agenda> -->
 
     <!-- <mgt-agenda id="myDay"></mgt-agenda> -->
 
