--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <script type="module" src="./dist/es6/components/providers/mgt-msal-provider/mgt-msal-provider.js"></script> -->
 
     <!-- <script src="./dist/bundle/mgt-loader.js"></script> -->
-    
+<!--     
     <script type="module" src="./dist/es6/components/providers/mgt-msal-provider.js"></script>
     <script type="module" src="./dist/es6/components/mgt-login/mgt-login.js"></script>
     <script type="module" src="./dist/es6/components/mgt-agenda/mgt-agenda.js"></script>
-    <script type="module" src="./dist/es6/mock/mgt-mock-provider.js"></script>
+    <script type="module" src="./dist/es6/mock/mgt-mock-provider.js"></script> -->
+
+    <script type="module" src="dist/es6/index.js"></script>
   </head>
   <body>
     <mgt-msal-provider
@@ -27,6 +29,7 @@
     <!-- <mgt-mock-provider></mgt-mock-provider> -->
 
     <mgt-login></mgt-login>
+    <mgt-tasks data-source="todo"></mgt-tasks>
     
     <!-- <script type="module">
       let login = document.getElementsByTagName('mgt-login')[0];
