--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Microsoft Graph Toolkit Test</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" />
 
-    <!-- <script type="module" src="./dist/es6/components/mgt-login/mgt-login.js"></script>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>Microsoft Graph Toolkit Test</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" />
+
+  <!-- <script type="module" src="./dist/es6/components/mgt-login/mgt-login.js"></script>
     <script type="module" src="./dist/es6/components/mgt-person/mgt-person.js"></script>
     <script type="module" src="./dist/es6/components/mgt-agenda/mgt-agenda.js"></script>
     <script type="module" src="./dist/es6/components/providers/mgt-msal-provider/mgt-msal-provider.js"></script> -->
 
-    <!-- <script src="./dist/bundle/mgt-loader.js"></script> -->
+  <!-- <script src="./dist/bundle/mgt-loader.js"></script> -->
 
-    <script type="module" src="./dist/es6/components/providers/mgt-msal-provider.js"></script>
-    <script type="module" src="./dist/es6/components/mgt-login/mgt-login.js"></script>
-    <script type="module" src="./dist/es6/components/mgt-agenda/mgt-agenda.js"></script>
-    <script type="module" src="./dist/es6/mock/mgt-mock-provider.js"></script>
-  </head>
-  <body>
-    <mgt-msal-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"></mgt-msal-provider>
+  <script type="module" src="./dist/es6/components/providers/mgt-msal-provider.js"></script>
+  <script type="module" src="./dist/es6/components/mgt-login/mgt-login.js"></script>
+  <script type="module" src="./dist/es6/components/mgt-agenda/mgt-agenda.js"></script>
+  <script type="module" src="./dist/es6/mock/mgt-mock-provider.js"></script>
+</head>
 
-    <!-- <mgt-mock-provider></mgt-mock-provider> -->
+<body>
+  <mgt-msal-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"
+    scopes="user.read,people.read,user.readbasic.all,calendars.read"></mgt-msal-provider>
 
-    <mgt-login></mgt-login>
+  <!-- <mgt-mock-provider></mgt-mock-provider> -->
 
-    <!-- <script type="module">
+  <mgt-login></mgt-login>
+
+  <!-- <script type="module">
       let login = document.getElementsByTagName('mgt-login')[0];
       
       login.addEventListener('loginInitiated', (event) => {console.log('loginInitiated'); login.userDetails = {
@@ -39,10 +42,10 @@
       login.addEventListener('logoutCompleted', (event) => {console.log('logoutCompleted')});
     </script> -->
 
-    <!-- <mgt-person person-query="me" show-name show-email></mgt-person> -->
-    <!-- <mgt-agenda></mgt-agenda> -->
+  <!-- <mgt-person person-query="me" show-name show-email></mgt-person> -->
+  <!-- <mgt-agenda></mgt-agenda> -->
 
-    <!-- <script type="module">
+  <!-- <script type="module">
       import {Providers} from './dist/es6/index.js'
       Providers.onProviderUpdated(handleProvider);
       handleProvider();
@@ -56,69 +59,71 @@
       }
     </script> -->
 
-    <mgt-agenda id="myDay">
-      <template>
-        <style>
-          .attendee-host {
-            display: flex;
-          }
-          .person-image {
-            height: 50px;
-          }
-        </style>
-        <ul>
-          <li data-for="event in events">
-            <div class="event-subject">{{ event.subject }}</div>
-            <div class="attendee-host">
-              <div data-for="attendee in event.attendees">
-                <mgt-person person-query="{{ attendee.emailAddress.name }}">
-                  <template>
-                    <div data-if="person.image">
-                      <img class="person-image" src="{{ person.image }}" />
-                    </div>
-                    <div data-else>
-                      {{ person.displayName }}
-                    </div>
-                  </template>
-                </mgt-person>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </template>
-      <template data-type="event">
-        <style>
-          .event-subject {
-            font-size: 30px;
-          }
-        </style>
-        <button class="eventButton">
-          <div class="event-subject">{{ event.subject }}</div>
-          <div data-for="attendee in event.attendees">
-            <mgt-person person-query="{{ attendee.emailAddress.name }}" show-name show-email></mgt-person>
-          </div>
-        </button>
-      </template>
-      <template data-type="no-data">
-        Where is the data
-      </template>
-      <template data-type="loading">
-        Loading
-      </template>
-    </mgt-agenda>
-
-    <script type="module">
-      let myDay = document.getElementById('myDay');
-      myDay.addEventListener('templateRendered', e => {
-        if (e.detail && e.detail.context) {
-          let button = e.detail.element.querySelector('.eventButton');
-          if (button) {
-            button.addEventListener('click', () => {
-              console.log('clicked ' + e.detail.context.event.subject);
-            });
-          }
+  <mgt-agenda id="myDay">
+    <template>
+      <style>
+        .attendee-host {
+          display: flex;
         }
-      });
-    </script>
-  </body>
+
+        .person-image {
+          height: 50px;
+        }
+      </style>
+      <ul>
+        <li data-for="event in events">
+          <div class="event-subject">{{ event.subject }}</div>
+          <div class="attendee-host">
+            <div data-for="attendee in event.attendees">
+              <mgt-person person-query="{{ attendee.emailAddress.name }}">
+                <template>
+                  <div data-if="person.image">
+                    <img class="person-image" src="{{ person.image }}" />
+                  </div>
+                  <div data-else>
+                    {{ person.displayName }}
+                  </div>
+                </template>
+              </mgt-person>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </template>
+    <template data-type="event">
+      <style>
+        .event-subject {
+          font-size: 30px;
+        }
+      </style>
+      <button class="eventButton">
+        <div class="event-subject">{{ event.subject }}</div>
+        <div data-for="attendee in event.attendees">
+          <mgt-person person-query="{{ attendee.emailAddress.name }}" show-name show-email></mgt-person>
+        </div>
+      </button>
+    </template>
+    <template data-type="no-data">
+      Where is the data
+    </template>
+    <template data-type="loading">
+      Loading
+    </template>
+  </mgt-agenda>
+
+  <script type="module">
+    let myDay = document.getElementById('myDay');
+    myDay.addEventListener('templateRendered', e => {
+      if (e.detail && e.detail.context) {
+        let button = e.detail.element.querySelector('.eventButton');
+        if (button) {
+          button.addEventListener('click', () => {
+            console.log('clicked ' + e.detail.context.event.subject);
+          });
+        }
+      }
+    });
+  </script>
+</body>
+
 </html>
