Have mgt-people load frequent contacts by default

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script type="module" src="./dist/es6/components/providers/mgt-msal-provider.js"></script>
   <script type="module" src="./dist/es6/components/mgt-login/mgt-login.js"></script>
   <script type="module" src="./dist/es6/components/mgt-agenda/mgt-agenda.js"></script>
+  <script type="module" src="./dist/es6/components/mgt-people/mgt-people.js"></script>
   <script type="module" src="./dist/es6/mock/mgt-mock-provider.js"></script>
 </head>
 
@@ -51,23 +52,6 @@
       </ul>
     </template>
   </mgt-people>
-
-  <script type="module">
-    import { Providers } from './dist/es6/index.js';
-
-    async function getPeople() {
-      if (Providers.globalProvider) {
-        let client = Providers.globalProvider.graph; // .client
-
-        let people = document.getElementsByTagName('mgt-people')[0];
-
-        people.people = (await client.contacts()).slice(0, 4);
-      }
-    }
-
-    Providers.onProviderUpdated(() => getPeople());
-    getPeople();
-  </script>
 
   <!-- <script type="module">
       let login = document.getElementsByTagName('mgt-login')[0];
