--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
     <script type="module" src="./dist/es6/components/providers/mgt-msal-provider/mgt-msal-provider.js"></script> -->
 
     <!-- <script src="./dist/bundle/mgt-loader.js"></script> -->
-
-    <script type="module" src="./dist/es6/components/providers/mgt-msal-provider.js"></script>
+    <!-- <script type="module" src="dist/es6/index.js"></script> -->
+    
     <script type="module" src="./dist/es6/components/mgt-login/mgt-login.js"></script>
     <script type="module" src="./dist/es6/components/mgt-agenda/mgt-agenda.js"></script>
     <script type="module" src="./dist/es6/mock/mgt-mock-provider.js"></script>
+    <script type="module" src="./dist/es6/components/providers/mgt-msal-provider.js"></script>  
+    <script type="module" src="./dist/es6/components/mgt-tasks/mgt-tasks.js"></script>
+
   </head>
   <body>
     <mgt-msal-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"></mgt-msal-provider>
