Removed 'Unassigned' from new task selection

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- <mgt-mock-provider></mgt-mock-provider> -->
 
     <mgt-login></mgt-login>
-    <mgt-tasks data-source="todo"></mgt-tasks>
+    <mgt-tasks></mgt-tasks>
     
     <!-- <script type="module">
       let login = document.getElementsByTagName('mgt-login')[0];
