clean up index head

--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Microsoft Graph Toolkit Test</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" />
 
-    <!-- <script type="module" src="./dist/es6/components/mgt-login/mgt-login.js"></script>
-    <script type="module" src="./dist/es6/components/mgt-person/mgt-person.js"></script>
-    <script type="module" src="./dist/es6/components/mgt-agenda/mgt-agenda.js"></script>
-    <script type="module" src="./dist/es6/components/providers/mgt-msal-provider/mgt-msal-provider.js"></script> -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" />
+    <script src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 
     <!-- <script src="./dist/bundle/mgt-loader.js"></script> -->
 
