--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" />
-    <script src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+    <!-- <script src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script> -->
 
-    <!-- <script src="./dist/bundle/mgt-loader.js"></script> -->
+    <script src="./dist/bundle/mgt-loader.js"></script>
     <!-- <script type="module" src="dist/es6/index.js"></script> -->
 
-    <script type="module" src="./dist/es6/components/mgt-login/mgt-login.js"></script>
+    <!-- <script type="module" src="./dist/es6/components/mgt-login/mgt-login.js"></script>
     <script type="module" src="./dist/es6/components/mgt-agenda/mgt-agenda.js"></script>
     <script type="module" src="./dist/es6/mock/mgt-mock-provider.js"></script>
     <script type="module" src="./dist/es6/components/providers/mgt-msal-provider.js"></script>
-    <script type="module" src="./dist/es6/components/mgt-tasks/mgt-tasks.js"></script>
+    <script type="module" src="./dist/es6/components/mgt-tasks/mgt-tasks.js"></script> -->
   </head>
 
   <body>
