Fix mgt-people templating and other improvements

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <mgt-login></mgt-login>
 
     <mgt-people>
-      <template>
+      <!-- <template>
         <style>
           .people-list {
             list-style-type: none;
@@ -46,7 +46,7 @@
             </div>
           </li>
         </ul>
-      </template>
+      </template> -->
     </mgt-people>
 
     <!-- <script type="module">
@@ -62,10 +62,10 @@
       login.addEventListener('logoutCompleted', (event) => {console.log('logoutCompleted')});
     </script> -->
 
-  <!-- <mgt-person person-query="me" show-name show-email></mgt-person> -->
-  <!-- <mgt-agenda></mgt-agenda> -->
+    <!-- <mgt-person person-query="me" show-name show-email></mgt-person> -->
+    <!-- <mgt-agenda></mgt-agenda> -->
 
-  <!-- <script type="module">
+    <!-- <script type="module">
       import {Providers} from './dist/es6/index.js'
       Providers.onProviderUpdated(handleProvider);
       handleProvider();
@@ -79,71 +79,70 @@
       }
     </script> -->
 
-  <mgt-agenda id="myDay">
-    <template>
-      <style>
-        .attendee-host {
-          display: flex;
-        }
+    <mgt-agenda id="myDay">
+      <template>
+        <style>
+          .attendee-host {
+            display: flex;
+          }
 
-        .person-image {
-          height: 50px;
-        }
-      </style>
-      <ul>
-        <li data-for="event in events">
-          <div class="event-subject">{{ event.subject }}</div>
-          <div class="attendee-host">
-            <div data-for="attendee in event.attendees">
-              <mgt-person person-query="{{ attendee.emailAddress.name }}">
-                <template>
-                  <div data-if="person.image">
-                    <img class="person-image" src="{{ person.image }}" />
-                  </div>
-                  <div data-else>
-                    {{ person.displayName }}
-                  </div>
-                </template>
-              </mgt-person>
+          .person-image {
+            height: 50px;
+          }
+        </style>
+        <ul>
+          <li data-for="event in events">
+            <div class="event-subject">{{ event.subject }}</div>
+            <div class="attendee-host">
+              <div data-for="attendee in event.attendees">
+                <mgt-person person-query="{{ attendee.emailAddress.name }}">
+                  <template>
+                    <div data-if="person.image">
+                      <img class="person-image" src="{{ person.image }}" />
+                    </div>
+                    <div data-else>
+                      {{ person.displayName }}
+                    </div>
+                  </template>
+                </mgt-person>
+              </div>
             </div>
+          </li>
+        </ul>
+      </template>
+      <template data-type="event">
+        <style>
+          .event-subject {
+            font-size: 30px;
+          }
+        </style>
+        <button class="eventButton">
+          <div class="event-subject">{{ event.subject }}</div>
+          <div data-for="attendee in event.attendees">
+            <mgt-person person-query="{{ attendee.emailAddress.name }}" show-name show-email></mgt-person>
           </div>
-        </li>
-      </ul>
-    </template>
-    <template data-type="event">
-      <style>
-        .event-subject {
-          font-size: 30px;
-        }
-      </style>
-      <button class="eventButton">
-        <div class="event-subject">{{ event.subject }}</div>
-        <div data-for="attendee in event.attendees">
-          <mgt-person person-query="{{ attendee.emailAddress.name }}" show-name show-email></mgt-person>
-        </div>
-      </button>
-    </template>
-    <template data-type="no-data">
-      Where is the data
-    </template>
-    <template data-type="loading">
-      Loading
-    </template>
-  </mgt-agenda>
+        </button>
+      </template>
+      <template data-type="no-data">
+        Where is the data
+      </template>
+      <template data-type="loading">
+        Loading
+      </template>
+    </mgt-agenda>
 
-  <script type="module">
-    let myDay = document.getElementById('myDay');
-    myDay.addEventListener('templateRendered', e => {
-      if (e.detail && e.detail.context) {
-        let button = e.detail.element.querySelector('.eventButton');
-        if (button) {
-          button.addEventListener('click', () => {
-            console.log('clicked ' + e.detail.context.event.subject);
-          });
+    <script type="module">
+      let myDay = document.getElementById('myDay');
+      myDay.addEventListener('templateRendered', e => {
+        if (e.detail && e.detail.context) {
+          let button = e.detail.element.querySelector('.eventButton');
+          if (button) {
+            button.addEventListener('click', () => {
+              console.log('clicked ' + e.detail.context.event.subject);
+            });
+          }
         }
-      }
-    });
-  </script>
-</body>
-
+      });
+    </script>
+  </body>
 </html>
