--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" />
-    <script src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+    <!-- <script src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script> -->
 
-    <!-- <script src="./dist/bundle/mgt-loader.js"></script> -->
+    <script src="./dist/bundle/mgt-loader.js"></script>
+    <!-- <script type="module" src="dist/es6/index.js"></script> -->
 
-    <script type="module" src="./dist/es6/components/providers/mgt-msal-provider.js"></script>
-    <script type="module" src="./dist/es6/components/mgt-login/mgt-login.js"></script>
+    <!-- <script type="module" src="./dist/es6/components/mgt-login/mgt-login.js"></script>
     <script type="module" src="./dist/es6/components/mgt-agenda/mgt-agenda.js"></script>
     <script type="module" src="./dist/es6/mock/mgt-mock-provider.js"></script>
+    <script type="module" src="./dist/es6/components/providers/mgt-msal-provider.js"></script>
+    <script type="module" src="./dist/es6/components/mgt-tasks/mgt-tasks.js"></script> -->
   </head>
 
   <body>
@@ -26,6 +28,7 @@
     <!-- <mgt-mock-provider></mgt-mock-provider> -->
 
     <mgt-login></mgt-login>
+    <mgt-tasks></mgt-tasks>
 
     <!-- <script type="module">
       let login = document.getElementsByTagName('mgt-login')[0];
@@ -56,71 +59,5 @@
         }
       }
     </script> -->
-
-    <mgt-agenda id="myDay">
-      <template>
-        <style>
-          .attendee-host {
-            display: flex;
-          }
-
-          .person-image {
-            height: 50px;
-          }
-        </style>
-        <ul>
-          <li data-for="event in events">
-            <div class="event-subject">{{ event.subject }}</div>
-            <div class="attendee-host">
-              <div data-for="attendee in event.attendees">
-                <mgt-person person-query="{{ attendee.emailAddress.name }}">
-                  <template>
-                    <div data-if="person.image">
-                      <img class="person-image" src="{{ person.image }}" />
-                    </div>
-                    <div data-else>
-                      {{ person.displayName }}
-                    </div>
-                  </template>
-                </mgt-person>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </template>
-      <template data-type="event">
-        <style>
-          .event-subject {
-            font-size: 30px;
-          }
-        </style>
-        <button class="eventButton">
-          <div class="event-subject">{{ event.subject }}</div>
-          <div data-for="attendee in event.attendees">
-            <mgt-person person-query="{{ attendee.emailAddress.name }}" show-name show-email></mgt-person>
-          </div>
-        </button>
-      </template>
-      <template data-type="no-data">
-        Where is the data
-      </template>
-      <template data-type="loading">
-        Loading
-      </template>
-    </mgt-agenda>
-
-    <script type="module">
-      let myDay = document.getElementById('myDay');
-      myDay.addEventListener('templateRendered', e => {
-        if (e.detail && e.detail.context) {
-          let button = e.detail.element.querySelector('.eventButton');
-          if (button) {
-            button.addEventListener('click', () => {
-              console.log('clicked ' + e.detail.context.event.subject);
-            });
-          }
-        }
-      });
-    </script>
   </body>
 </html>
