--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <!-- <mgt-mock-provider></mgt-mock-provider> -->
 
     <mgt-login></mgt-login>
-    <mgt-tasks></mgt-tasks>
+    <mgt-tasks data-source="todo"></mgt-tasks>
+    <mgt-agenda group-by-day></mgt-agenda>
 
     <mgt-people>
       <!-- <template>
