updated sharepoint and teams demos

--- a/samples/teams-tab/auth.html
+++ b/samples/teams-tab/auth.html
@@ -1,9 +1,9 @@
 <html>
-    <head>
-        <script src="./node_modules/microsoft-graph-toolkit/dist/es6/index.js"></script>
-        <script>
-            var mgt = parcelRequire('node_modules/microsoft-graph-toolkit/dist/es6/index.js');
-            mgt.TeamsProvider.auth();
-        </script>
-    </head>
+  <head>
+    <script src="./node_modules/@microsoft/mgt/dist/es6/index.js"></script>
+    <script>
+      var mgt = parcelRequire('node_modules/@microsoft/mgt/dist/es6/index.js');
+      mgt.TeamsProvider.auth();
+    </script>
+  </head>
 </html>
