--- a/samples/teams-tab/index.html
+++ b/samples/teams-tab/index.html
@@ -1,15 +1,14 @@
 <html>
-<body>
+  <body>
     <head>
-        <script src="./node_modules/microsoft-graph-toolkit/dist/es6/index.js"></script>
-        <link href="./node_modules/microsoft-graph-toolkit/index.css" rel="stylesheet" />
+      <script src="./node_modules/@microsoft/mgt/dist/es6/index.js"></script>
     </head>
     <mgt-teams-provider
-            client-id="ded74c58-5126-42b0-be48-c3971d8c8e98"
-            login-popup-url="https://mgtsampleapps.z5.web.core.windows.net/auth.html"
-            ></mgt-teams-provider>
+      client-id="ded74c58-5126-42b0-be48-c3971d8c8e98"
+      login-popup-url="https://mgtsampleapps.z5.web.core.windows.net/auth.html"
+    ></mgt-teams-provider>
     <mgt-login style="float: right;"></mgt-login>
     <mgt-person person-id="alex"></mgt-person>
     <mgt-agenda id="myDay"></mgt-agenda>
-</body>
+  </body>
 </html>
