--- a/samples/teams-tab/auth.html
+++ b/samples/teams-tab/auth.html
@@ -1,9 +1,10 @@
 <html>
   <head>
-    <script src="./node_modules/@microsoft/mgt/dist/es6/index.js"></script>
+    <script src="https://unpkg.com/@microsoft/teams-js/dist/MicrosoftTeams.min.js" crossorigin="anonymous"></script>
+    <script src="./bundle/mgt-loader.js"></script>
     <script>
-      var mgt = parcelRequire('node_modules/@microsoft/mgt/dist/es6/index.js');
-      mgt.TeamsProvider.auth();
+      mgt.TeamsProvider.handleAuth();
     </script>
   </head>
+  <body></body>
 </html>
