--- a/samples/react-app/public/index.html
+++ b/samples/react-app/public/index.html
@@ -1,8 +1,7 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="viewport"
