Rename Vue sample favicon filename

--- a/samples/vue-app/public/index.html
+++ b/samples/vue-app/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="<%= BASE_URL %>favicon_new.ico">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>My Organizer</title>
   <!-- Edge Webcomponent Polyfill -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/2.2.8/webcomponents-bundle.js"></script>
