--- a/index.html
+++ b/index.html
@@ -9,18 +9,27 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" />
     <!-- <script src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script> -->
 
+    <!-- <script src="https://unpkg.com/@microsoft/teams-js/dist/MicrosoftTeams.min.js" crossorigin="anonymous"></script> -->
+
     <!-- <script src="./dist/bundle/mgt-loader.js"></script> -->
     <!-- <script type="module" src="dist/es6/index.js"></script> -->
 
     <script type="module" src="./dist/es6/components/mgt-login/mgt-login.js"></script>
     <script type="module" src="./dist/es6/components/mgt-agenda/mgt-agenda.js"></script>
     <script type="module" src="./dist/es6/components/mgt-people/mgt-people.js"></script>
-    <script type="module" src="./dist/es6/mock/mgt-mock-provider.js"></script>
-    <script type="module" src="./dist/es6/components/providers/mgt-msal-provider.js"></script>
     <script type="module" src="./dist/es6/components/mgt-tasks/mgt-tasks.js"></script>
+
+    <script type="module" src="./dist/es6/components/providers/mgt-msal-provider.js"></script>
+    <script type="module" src="./dist/es6/components/providers/mgt-teams-provider.js"></script>
+    <script type="module" src="./dist/es6/mock/mgt-mock-provider.js"></script>
   </head>
 
   <body>
+    <!-- <mgt-teams-provider
+      client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"
+      auth-popup-url="auth.html"
+    ></mgt-teams-provider> -->
+
     <mgt-msal-provider
       client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"
       scopes="user.read,people.read,user.readbasic.all,contacts.read,calendars.read"
