added mgt-card prototype

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script type="module" src="./dist/es6/mock/mgt-mock-provider.js"></script>
     <script type="module" src="./dist/es6/components/providers/mgt-msal-provider.js"></script>
     <script type="module" src="./dist/es6/components/mgt-tasks/mgt-tasks.js"></script>
+    <script type="module" src="./dist/es6/components/mgt-card/mgt-card.js"></script>
   </head>
 
   <body>
@@ -26,11 +27,70 @@
       scopes="user.read,people.read,user.readbasic.all,contacts.read,calendars.read"
     ></mgt-msal-provider>
 
-    <!-- <mgt-mock-provider></mgt-mock-provider> -->
+    <!-- <mgt-mock-provider></!-->
 
     <mgt-login></mgt-login>
-    <mgt-tasks data-source="todo"></mgt-tasks>
+    <!-- <mgt-tasks data-source="todo"></mgt-tasks>
     <mgt-agenda group-by-day></mgt-agenda>
-    <mgt-people></mgt-people>
+    <mgt-people></mgt-people> -->
+
+    <mgt-card id="myCard" query="me"></mgt-card>
+
+    <script>
+      // let card = document.getElementById('myCard');
+
+      // card.addEventListener('action', e => {
+      //   console.log(e.detail);
+      // });
+
+      // card.content = {
+      //   type: 'AdaptiveCard',
+      //   body: [
+      //     {
+      //       type: 'TextBlock',
+      //       size: 'Medium',
+      //       weight: 'Bolder',
+      //       text: 'Megan Bowen'
+      //     },
+      //     {
+      //       type: 'FactSet',
+      //       facts: [
+      //         {
+      //           title: 'Given name',
+      //           value: 'Megan'
+      //         },
+      //         {
+      //           title: 'Surname',
+      //           value: 'Bowen'
+      //         },
+      //         {
+      //           title: 'Job title',
+      //           value: 'Auditor'
+      //         },
+      //         {
+      //           title: 'Office location',
+      //           value: '12/1110'
+      //         },
+      //         {
+      //           title: 'Email',
+      //           value: 'MeganB@M365x214355.onmicrosoft.com'
+      //         }
+      //       ]
+      //     },
+      //     {
+      //       type: 'TextBlock',
+      //       text: 'Business phones',
+      //       weight: 'Bolder'
+      //     },
+      //     {
+      //       type: 'TextBlock',
+      //       text: '+1 412 555 0109',
+      //       spacing: 'None'
+      //     }
+      //   ],
+      //   $schema: 'http://adaptivecards.io/schemas/adaptive-card.json',
+      //   version: '1.0'
+      // };
+    </script>
   </body>
 </html>
