--- a/samples/examples/people-picker.html
+++ b/samples/examples/people-picker.html
@@ -9,33 +9,61 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" />
     <!-- <script src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script> -->
 
-    <script src="../../dist/bundle/mgt-loader.js"></script>
+    <script type="module" src="../../dist/es6/index.js"></script>
+    <script type="module" src="../../dist/es6/mock/mgt-mock-provider.js"></script>
   </head>
 
   <body>
-    <mgt-mock-provider></mgt-mock-provider>
+    <mgt-msal-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"></mgt-msal-provider>
 
-    <div style="max-width: 500px; max-height: 400px">
-      <mgt-people-picker id="picker1"></mgt-people-picker>
-    </div>
+    <!-- <mgt-mock-provider></mgt-mock-provider> -->
+
+    <mgt-login></mgt-login>
+
+    <mgt-people-picker id="picker1"></mgt-people-picker>
 
     <div style="position: fixed; bottom: 0;">
       <h3>Group:</h3>
-      <select id="groupChooser" onchange="getGroupValue(this)" name="group">
+      <select id="groupChooser" name="group">
         <option value="">none</option>
-        <option value="02bd9fd6-8f93-4758-87c3-1fb73740a315">02bd9fd6-8f93-4758-87c3-1fb73740a315</option>
-        <option value="06f62f70-9827-4e6e-93ef-8e0f2d9b7b23">06f62f70-9827-4e6e-93ef-8e0f2d9b7b23</option>
-        <option value="0a53828f-36c9-44c3-be3d-99a7fce977ac">0a53828f-36c9-44c3-be3d-99a7fce977ac</option>
-        <option value="1381c058-2ee8-41ce-a005-aae7d91fe086">1381c058-2ee8-41ce-a005-aae7d91fe086</option>
       </select>
       <h3>Chosen People:</h3>
       <ul id="chosenPeople"></ul>
     </div>
   </body>
-  <script>
+  <script type="module">
+    import { Providers, ProviderState } from '../../dist/es6/index.js';
+
     let picker1 = document.getElementById('picker1');
     let chosenArea = document.getElementById('chosenPeople');
     let groupChooser = document.getElementById('groupChooser');
+
+    groupChooser.addEventListener('change', getGroupValue);
+
+    let provider = Providers.globalProvider;
+
+    loadGroups();
+    provider.onStateChanged(loadGroups);
+
+    function loadGroups() {
+      if (provider && provider.state === ProviderState.SignedIn) {
+        let client = provider.graph.client;
+
+        client
+          .api('/groups')
+          .get()
+          .then(groups => {
+            console.log(groups);
+            for (let group of groups.value) {
+              let option = document.createElement('option');
+              option.value = group.id;
+              option.text = group.displayName;
+
+              groupChooser.appendChild(option);
+            }
+          });
+      }
+    }
 
     picker1.addEventListener('selectionChanged', function(e) {
       //reset area
@@ -48,7 +76,8 @@
       }
     });
 
-    function getGroupValue(selection) {
+    function getGroupValue(e) {
+      let selection = groupChooser.selectedOptions[0];
       if (selection !== undefined) {
         setGroupValue(selection.value);
       }
