Visualy working person-card prototype

--- a/samples/examples/person-card.html
+++ b/samples/examples/person-card.html
@@ -20,12 +20,12 @@
   </head>
 
   <body>
-    <mgt-msal-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"></mgt-msal-provider>
+    <!-- <mgt-msal-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"></mgt-msal-provider> -->
 
-    <!-- <mgt-mock-provider></mgt-mock-provider> -->
+    <mgt-mock-provider></mgt-mock-provider>
 
     <!-- <mgt-login></mgt-login> -->
-    <mgt-person person-query="nikola" show-name show-email></mgt-person>
+    <mgt-person person-query="me" show-name show-email show-card></mgt-person>
     <!-- <mgt-person-card></mgt-person-card> -->
   </body>
 </html>
