[people-picker] updating error message so that it floats on top of content below

--- a/samples/examples/people-picker.html
+++ b/samples/examples/people-picker.html
@@ -21,6 +21,7 @@
     <mgt-login></mgt-login>
 
     <mgt-people-picker id="picker1"></mgt-people-picker>
+    <h2>hello</h2>
 
     <div style="position: fixed; bottom: 0;">
       <h3>Group:</h3>
