[people-picker] changing text overflow property on selected people

--- a/samples/examples/people-picker.html
+++ b/samples/examples/people-picker.html
@@ -20,7 +20,8 @@
 
     <mgt-login></mgt-login>
 
-    <mgt-people-picker id="picker1"></mgt-people-picker>
+    <div style="max-width: 200px"><mgt-people-picker id="picker1"></mgt-people-picker></div>
+    <!-- <mgt-tasks></mgt-tasks> -->
     <h2>hello</h2>
 
     <div style="position: fixed; bottom: 0;">
