added PersonCardInteraction enum and support for both click and hover for person card in person component

--- a/samples/examples/person-card.html
+++ b/samples/examples/person-card.html
@@ -25,7 +25,7 @@
     <mgt-mock-provider></mgt-mock-provider>
 
     <!-- <mgt-login></mgt-login> -->
-    <mgt-person person-query="me" show-name show-email person-card="click|hover|none"></mgt-person>
+    <mgt-person person-query="me" show-name show-email person-card="hover"></mgt-person>
     <!-- <mgt-person-card></mgt-person-card> -->
   </body>
 </html>
