--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <mgt-msal-provider
       client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"
       scopes="user.read,people.read,user.readbasic.all,contacts.read,calendars.read"
+      depends-on="mgt-teams-provider"
     ></mgt-msal-provider>
 
     <!-- <mgt-mock-provider></mgt-mock-provider> -->
