--- a/samples/examples/people-picker.html
+++ b/samples/examples/people-picker.html
@@ -14,13 +14,14 @@
   </head>
 
   <body>
-    <mgt-msal-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"></mgt-msal-provider>
+    <!-- <mgt-msal-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"></mgt-msal-provider> -->
 
-    <!-- <mgt-mock-provider></mgt-mock-provider> -->
+    <mgt-mock-provider></mgt-mock-provider>
 
     <mgt-login></mgt-login>
 
-    <mgt-people-picker id="picker1"></mgt-people-picker>
+    <div style="max-width: 200px"><mgt-people-picker id="picker1"></mgt-people-picker></div>
+    <!-- <mgt-tasks></mgt-tasks> -->
     <h2>hello</h2>
 
     <div style="position: fixed; bottom: 0;">
