--- a/samples/examples/person-card.html
+++ b/samples/examples/person-card.html
@@ -13,8 +13,12 @@
     <script type="module" src="../../dist/es6/index.js"></script>
     <script type="module" src="../../dist/es6/mock/mgt-mock-provider.js"></script>
     <style>
-      mgt-person-card {
-        margin: 10px;
+      mgt-person {
+        margin: 20px;
+      }
+
+      .details {
+        margin: 10px 0;
       }
     </style>
   </head>
@@ -25,7 +29,24 @@
     <mgt-mock-provider></mgt-mock-provider>
 
     <!-- <mgt-login></mgt-login> -->
-    <mgt-person person-query="me" show-name show-email person-card="hover"></mgt-person>
-    <!-- <mgt-person-card></mgt-person-card> -->
+    <mgt-person person-query="alex" person-card="hover"> </mgt-person>
+
+    <mgt-person person-query="me" show-name show-email person-card="hover">
+      <template data-type="person-card">
+        <mgt-person-card person-details="{{ person }}" person-image="{{ personImage }}"></mgt-person-card>
+      </template>
+    </mgt-person>
+
+    <mgt-person person-query="me" show-name show-email person-card="click">
+      <template data-type="person-card">
+        <mgt-person-card person-details="{{ person }}" person-image="{{ personImage }}">
+          <template data-type="additional-details">
+            <div class="details">
+              Here is some additional content here
+            </div>
+          </template>
+        </mgt-person-card>
+      </template>
+    </mgt-person>
   </body>
 </html>
