--- a/samples/examples/people-picker.html
+++ b/samples/examples/people-picker.html
@@ -1,22 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Microsoft Graph Toolkit Test</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" />
-    <!-- <script src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script> -->
-
-    <script type="module" src="../../dist/es6/index.js"></script>
-    <script type="module" src="../../dist/es6/mock/mgt-mock-provider.js"></script>
+      <script src="https://unpkg.com/@microsoft/mgt/dist/bundle/mgt-loader.js"></script>
   </head>
 
   <body>
-    <!-- <mgt-msal-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"></mgt-msal-provider> -->
-
-    <mgt-mock-provider></mgt-mock-provider>
+    <mgt-msal-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"></mgt-msal-provider>
 
     <mgt-login></mgt-login>
 
@@ -33,8 +22,7 @@
       <ul id="chosenPeople"></ul>
     </div>
   </body>
-  <script type="module">
-    import { Providers, ProviderState } from '../../dist/es6/index.js';
+  <script>
 
     let picker1 = document.getElementById('picker1');
     let chosenArea = document.getElementById('chosenPeople');
@@ -42,13 +30,13 @@
 
     groupChooser.addEventListener('change', getGroupValue);
 
-    let provider = Providers.globalProvider;
+    let provider = mgt.Providers.globalProvider;
 
     loadGroups();
     provider.onStateChanged(loadGroups);
 
     function loadGroups() {
-      if (provider && provider.state === ProviderState.SignedIn) {
+      if (provider && provider.state === mgt.ProviderState.SignedIn) {
         let client = provider.graph.client;
 
         client
