--- a/samples/examples/person-card.html
+++ b/samples/examples/person-card.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Microsoft Graph Toolkit Test</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" />
-    <script src="../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+    <script src="https://unpkg.com/@microsoft/mgt/dist/bundle/mgt-loader.js"></script>
 
-    <!-- <script src="./dist/bundle/mgt-loader.js"></script> -->
-    <script type="module" src="../../dist/es6/index.js"></script>
-    <script type="module" src="../../dist/es6/mock/mgt-mock-provider.js"></script>
     <style>
       mgt-person {
         margin: 20px;
@@ -24,9 +16,7 @@
   </head>
 
   <body>
-    <!-- <mgt-msal-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"></mgt-msal-provider> -->
-
-    <mgt-mock-provider></mgt-mock-provider>
+    <mgt-msal-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"></mgt-msal-provider>
 
     <!-- <mgt-login></mgt-login> -->
     <mgt-person person-query="alex" person-card="hover"> </mgt-person>
