--- a/samples/examples/teams.html
+++ b/samples/examples/teams.html
@@ -6,7 +6,7 @@
 <body>
     <mgt-teams-provider
         client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"
-        auth-popup-url="auth.html"
+        auth-popup-url="teams-auth.html"
     ></mgt-teams-provider>
     <mgt-msal-provider 
         client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"
